[gd_scene load_steps=7 format=3 uid="uid://y1x1exdnctuy"]

[ext_resource type="PackedScene" uid="uid://ctknb0lymanwg" path="res://2d/source/scenes/builder/status_bar.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bqp0rlaj5w25g" path="res://2d/source/scenes/builder/menu.tscn" id="2"]
[ext_resource type="Theme" uid="uid://260f2cqe7tfn" path="res://2d/assets/themes/rounded_button.tres" id="3"]
[ext_resource type="Theme" uid="uid://c6r0evvw6xarl" path="res://2d/assets/themes/transparent_borders.tres" id="4"]
[ext_resource type="Script" path="res://2d/source/scripts/builder/events/parent.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://dwsjq4q12xh8r" path="res://2d/source/scenes/builder/next_event.tscn" id="6"]

[node name="Node2D" type="Node2D" groups=["builder"]]
script = ExtResource("5")

[node name="HeaderMenu" parent="." instance=ExtResource("2")]

[node name="Container" type="ScrollContainer" parent="."]
offset_top = 80.0
offset_right = 1024.0
offset_bottom = 448.0
mouse_filter = 2
theme = ExtResource("4")

[node name="Grid" type="GridContainer" parent="Container"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
columns = 2

[node name="Grid2" type="HBoxContainer" parent="Container/Grid"]
custom_minimum_size = Vector2(222, 0)
layout_mode = 2
alignment = 2

[node name="LabelMessage" type="Label" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "json dictionary items cannot use multiple events.  Items are limited to one event. Puzzles use room 1. Player starts at room 2."

[node name="Grid9" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2
alignment = 2

[node name="LabelMessage2" type="Label" parent="Container/Grid"]
layout_mode = 2
theme = ExtResource("3")
theme_override_colors/font_color = Color(0, 0.329412, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "  "

[node name="EventNumber" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "    Event number."
horizontal_alignment = 2

[node name="Grid8" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="EventSpinbox" type="SpinBox" parent="Container/Grid/Grid8"]
layout_mode = 2
min_value = 1.0
max_value = 801.0
page = 1.0
value = 1.0

[node name="LabelDescription4" type="Label" parent="Container/Grid/Grid8"]
layout_mode = 2
mouse_filter = 1
text = "  Changing the value here will change everything below this option."

[node name="DungeonNumber" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "  Dungeon."
horizontal_alignment = 2

[node name="Grid10" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="DungeonNumberSpinbox" type="SpinBox" parent="Container/Grid/Grid10"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
min_value = 1.0
max_value = 8.0
page = 1.0
value = 1.0

[node name="LabelDescription5" type="Label" parent="Container/Grid/Grid10"]
layout_mode = 2
mouse_filter = 1
text = "  Event will start at this Dungeon."

[node name="LevelNumberLable" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "  Level."
horizontal_alignment = 2

[node name="Grid1" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="LevelNumberSpinbox" type="SpinBox" parent="Container/Grid/Grid1"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
min_value = 1.0
page = 1.0
value = 1.0

[node name="LabelDescription" type="Label" parent="Container/Grid/Grid1"]
layout_mode = 2
mouse_filter = 1
text = "  Event will start at this level."

[node name="LabelEventEnabled" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Event Enabled."
horizontal_alignment = 2

[node name="Grid5" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="EventEnabled" type="CheckButton" parent="Container/Grid/Grid5"]
layout_mode = 2

[node name="LabelDescription3" type="Label" parent="Container/Grid/Grid5"]
layout_mode = 2
mouse_filter = 1
text = "Is this event enabled for this level?"

[node name="ItemListTitleAdd" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1
text = "Select Prize Items From Dictionary."
horizontal_alignment = 2
autowrap_mode = 2

[node name="Grid4" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="ItemListAdd" type="ItemList" parent="Container/Grid/Grid4"]
custom_minimum_size = Vector2(500, 111)
layout_mode = 2
allow_reselect = true
item_count = 11
item_0/text = "amulet"
item_1/text = "armor"
item_2/text = "book"
item_3/text = "mobs1"
item_4/text = "mobs2"
item_5/text = "food"
item_6/text = "gold"
item_7/text = "ring"
item_8/text = "scroll"
item_9/text = "wand"
item_10/text = "weapon"

[node name="ItemListBody" type="Label" parent="Container/Grid/Grid4"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
text = "Select one json dictionary"

[node name="ItemListTitleEmpty3" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1

[node name="Grid3" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="Padding" type="Label" parent="Container/Grid/Grid3"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/Grid/Grid3"]
layout_mode = 2
text = "Select"

[node name="ItemListTitleRemove" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1
text = "Current Prize Rewards  "

[node name="Grid6" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="ItemListRemove" type="ItemList" parent="Container/Grid/Grid6"]
custom_minimum_size = Vector2(500, 111)
layout_mode = 2
select_mode = 1
allow_reselect = true
max_columns = 2
fixed_icon_size = Vector2i(32, 32)

[node name="ItemListBody" type="Label" parent="Container/Grid/Grid6"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
text = "More than on prize can be given to player."

[node name="ItemListTitle4" type="Label" parent="Container/Grid"]
layout_mode = 2
mouse_filter = 1

[node name="Grid7" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="Padding" type="Label" parent="Container/Grid/Grid7"]
layout_mode = 2

[node name="Button" type="Button" parent="Container/Grid/Grid7"]
layout_mode = 2
text = "Remove"

[node name="LabelAcceptingEnabled" type="Label" parent="Container/Grid"]
layout_mode = 2
text = "Accepting Enabled."

[node name="Grid12" type="HBoxContainer" parent="Container/Grid"]
layout_mode = 2

[node name="AcceptingEnabled" type="CheckButton" parent="Container/Grid/Grid12"]
layout_mode = 2

[node name="AcceptingEnabledDescription" type="Label" parent="Container/Grid/Grid12"]
layout_mode = 2
mouse_filter = 1
text = "Ask if player will accept to do this event? Otherwise, event is forced."

[node name="LabelAcceptQuestion" type="Label" parent="Container/Grid"]
layout_mode = 2
focus_previous = NodePath("../../../ToTitle")
text = "    Accepting text."

[node name="Grid11" type="GridContainer" parent="Container/Grid"]
layout_mode = 2
columns = 2

[node name="AcceptQuestionTextEdit" type="TextEdit" parent="Container/Grid/Grid11"]
custom_minimum_size = Vector2(500, 120)
layout_mode = 2

[node name="Padding" type="Label" parent="Container/Grid/Grid11"]
custom_minimum_size = Vector2(275, 0)
layout_mode = 2
text = "The text asking if you  accept this event."

[node name="EmptyLabel" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="EmptyDescription" type="Label" parent="Container/Grid"]
layout_mode = 2

[node name="StatusBar" parent="." instance=ExtResource("1")]

[node name="NextEvent" parent="." instance=ExtResource("6")]

[connection signal="value_changed" from="Container/Grid/Grid8/EventSpinbox" to="." method="_on_event_number_Spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid10/DungeonNumberSpinbox" to="." method="_on_dungeon_number_Spinbox_value_changed"]
[connection signal="value_changed" from="Container/Grid/Grid1/LevelNumberSpinbox" to="." method="_on_level_number_Spinbox_value_changed"]
[connection signal="toggled" from="Container/Grid/Grid5/EventEnabled" to="." method="_on_event_Enabled_toggled"]
[connection signal="item_selected" from="Container/Grid/Grid4/ItemListAdd" to="." method="_on_dictionary_ItemList_item_selected"]
[connection signal="pressed" from="Container/Grid/Grid3/Button" to="." method="_on_prize_item_list_add_Button_pressed"]
[connection signal="pressed" from="Container/Grid/Grid7/Button" to="." method="_on_prize_item_list_remove_Button_pressed"]
[connection signal="toggled" from="Container/Grid/Grid12/AcceptingEnabled" to="." method="_on_accepting_Enabled_toggled"]
[connection signal="text_changed" from="Container/Grid/Grid11/AcceptQuestionTextEdit" to="." method="_on_accepting_question_TextEdit_text_changed"]
[connection signal="tree_exiting" from="StatusBar" to="." method="_on_StatusBar_tree_exiting"]
